# simple-restaurant-api

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
scripts/db_init/: mysql_setup.sql
src/: main.rs
src/api/: mod.rs  restaurant_api.rs
src/common/: errors.rs
src/model/: mod.rs  requests.rs  resources.rs  responses.rs
src/persist/: fetch_table_items.rs  mod.rs  persist_table_items.rs  remove_table_items.rs
tests/: ab-post-file.txt  add_new_items.hurl  get_items.hurl  remove_items.hurl
